my-apps/media/nzbget/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nzbget
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
