my-apps/media/nzbget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
  namespace: nzbget
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      containers:
      - name: nzbget
        image: lscr.io/linuxserver/nzbget:latest
        ports:
        - containerPort: 6789
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /downloads
          subPath: data/usenet
        - name: data
          mountPath: /data
          subPath: data
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 1Gi
            cpu: 2000m
        securityContext:
          privileged: true
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nzbget-config
      - name: data
        persistentVolumeClaim:
          claimName: nzbget-data
