my-apps/media/nzbget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget-svc
  namespace: nzbget
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 6789
    protocol: TCP
  selector:
    app: nzbget
