my-apps/media/nzbget/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nzbget
  namespace: nzbget
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "NZBGet"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "sh-nzbget"
    gethomepage.dev/href: "https://nzbget.serverops.live"
    gethomepage.dev/pod-selector: "app=nzbget"
spec:
  hostnames:
  - nzbget.serverops.live
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal
    namespace: gateway
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: nzbget-svc
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
